<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">OpenMaka</string>
    <string name="render_options_title">Rendering Options</string>
    <string name="enable_mode_object_detection">Enable Object Recognition</string>
    <string name="enable_mode_tracking">Enable Tracking</string>
    <string name="enable_mode_opengl">Enable OpenGL</string>
    <string name="feature_detectors_title">Feature Detectors</string>
    <string name="detector_surf">SURF</string>
    <string name="detector_sift">SIFT</string>
    <string name="detector_fast">FAST</string>
    <string name="detector_orb">ORB</string>
    <string name="detector_brisk">BRISK</string>
    <string name="detector_dense">DENSE</string>
    <string name="detector_gftt">GFTT</string>
    <string name="detector_mser">MSER</string>
    <string name="detector_star">STAR</string>
    <string name="detector_akaze">AKAZE</string>
    <string name="feature_extractors_title">Feature Extractors</string>
    <string name="extractor_sift">SIFT</string>
    <string name="extractor_brief">BRIEF</string>
    <string name="extractor_orb">ORB</string>
    <string name="extractor_surf">SURF</string>
    <string name="extractor_brisk">BRISK</string>
    <string name="extractor_freak">FREAK</string>
    <string name="extractor_akaze">AKAZE</string>
    <string name="feature_matchers_title">Feature Matchers</string>
    <string name="matcher_flannbased">Flannbased Matcher</string>
    <string name="matcher_bruteforce">BruteForce Matcher</string>
    <string name="general_options_reload">Reload App</string>
    <string name="general_options_imprint">Impressum</string>
    <string name="general_options">Settings</string>
    <string name="feature_detectors_menu">FeatureDetectorsMenu</string>
    <string name="render_options_menu">RenderOptionsMenu</string>
    <string name="feature_extractors_menu">FeatureExtractorsMenu</string>
    <string name="feature_matchers_menu">FeatureMatchersMenu</string>
    <string name="edit_debug_mode">Debug Mode</string>
    <string name="edit_statistic_mode">Statistic Mode</string>
    <string name="developer_modes">Developer Modes</string>
    <string name="edit_maximal_image_size">Maximal Image Size</string>
    <string name="edit_global_options">Processing Options</string>
    <string name="edit_analyzer_options">Analyzer Options</string>
    <string name="edit_nn_distance_ratio">NN Distance Ratio</string>
    <string name="edit_k_groups">K Groups</string>
    <string name="edit_ransac_reprojection_threshold">Ransac Reprojection Threshold</string>
    <string name="edit_tracker_options">Tracker Options</string>
    <string name="edit_max_corners">Max Corners</string>
    <string name="edit_quality_level">Quality Level</string>
    <string name="edit_minimum_distance">Minimum Distance</string>
    <string name="edit_detector">Default Detector</string>
    <string name="edit_extractor">Default Extractor</string>
    <string name="edit_minimum_inliers">Minimum Inliers</string>
    <string name="edit_minimum_matches">Minimum Matches</string>
    <string name="info_line_text">Configuration: %1$s - %2$s - %3$s</string>
    <string name="general_tests">Run Tests</string>
    <string name="save_result_button">Results</string>
    <string name="run_test_button">Run</string>
    <string name="test_quantifier_hint">Iterations (Number)</string>
    <string name="save">Save</string>
    <string name="close">close</string>
    <string name="edit_result_image_mode">Save Result Images</string>
</resources>
