<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/developer_modes"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/edit_statistic_mode" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="right">

                    <CheckBox
                        android:id="@+id/check_statistic"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/edit_debug_mode" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="right">

                    <CheckBox
                        android:id="@+id/check_debug"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </LinearLayout>

            </LinearLayout>


        </LinearLayout>

        <View
            android:layout_marginTop="14dp"
            android:layout_width="match_parent"
            android:background="@android:color/black"
            android:layout_height="1dp"/>


        <LinearLayout
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:layout_marginTop="18dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/edit_global_options"
                android:textSize="18sp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/edit_maximal_image_size"/>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="0.3"
                    android:layout_height="wrap_content"
                    android:gravity="right">

                    <EditText
                        android:inputType="numberDecimal"
                        android:id="@+id/edit_maximal_image_size"
                        android:imeOptions="actionDone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <View
            android:layout_marginTop="14dp"
            android:layout_width="match_parent"
            android:background="@android:color/black"
            android:layout_height="1dp"/>


        <LinearLayout
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:layout_marginTop="18dp"
            android:descendantFocusability="beforeDescendants"
            android:focusableInTouchMode="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/edit_analyzer_options"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/edit_minimum_inliers"/>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="0.3"
                    android:layout_height="wrap_content"
                    android:gravity="right">

                    <EditText
                        android:inputType="numberDecimal"
                        android:id="@+id/edit_minimum_inliers"
                        android:imeOptions="actionDone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/edit_minimum_matches"/>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="0.3"
                    android:layout_height="wrap_content"
                    android:gravity="right">

                    <EditText
                        android:inputType="numberDecimal"
                        android:id="@+id/edit_minimum_matches"
                        android:imeOptions="actionDone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/edit_nn_distance_ratio" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="0.3"
                    android:layout_height="wrap_content"
                    android:gravity="right">

                    <EditText
                        android:inputType="numberDecimal"
                        android:id="@+id/edit_nn_distance_ratio"
                        android:imeOptions="actionDone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/edit_k_groups" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="0.3"
                    android:layout_height="wrap_content"
                    android:gravity="right">

                    <EditText
                        android:inputType="number"
                        android:id="@+id/edit_k_groups"
                        android:imeOptions="actionDone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/edit_ransac_reprojection_threshold" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="0.3"
                    android:gravity="right"
                    android:layout_height="wrap_content">

                    <EditText
                        android:inputType="numberDecimal"
                        android:id="@+id/edit_ransac_reprojection_threshold"
                        android:imeOptions="actionDone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </LinearLayout>

            </LinearLayout>


        </LinearLayout>


        <View
            android:layout_marginTop="14dp"
            android:layout_width="match_parent"
            android:background="@android:color/black"
            android:layout_height="1dp"/>


        <LinearLayout
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:layout_marginTop="18dp"
            android:descendantFocusability="beforeDescendants"
            android:focusableInTouchMode="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/edit_tracker_options"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/edit_max_corners" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="0.3"
                    android:layout_height="wrap_content"
                    android:gravity="right">

                    <EditText
                        android:inputType="number"
                        android:id="@+id/edit_max_corners"
                        android:imeOptions="actionDone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/edit_quality_level" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="0.3"
                    android:layout_height="wrap_content"
                    android:gravity="right">

                    <EditText
                        android:inputType="numberDecimal"
                        android:id="@+id/edit_quality_level"
                        android:imeOptions="actionDone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/edit_minimum_distance" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="0.3"
                    android:gravity="right"
                    android:layout_height="wrap_content">

                    <EditText
                        android:inputType="number"
                        android:id="@+id/edit_minimum_distance"
                        android:imeOptions="actionDone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </LinearLayout>

            </LinearLayout>


        </LinearLayout>


    </LinearLayout>

</ScrollView>
